tests/fixtures/invalid/none_gt_none.py
# Cannot compare with > None and None
x: bool = None > None
